# Editor-collab

./: .gitignore  BUILD.md  BUILD_SUCCESS.md  CMakeLists.txt  COMPLETE.md  PROJECT_COMPLETE.md  README.md  about.md  build.bat  changelog.md  compile.bat  fastcompile.bat  issues.md  mod.json  package.json  todo.md
CollabEditor.geode/: mod.json
CollabEditor.geode/include/: collab.hpp
MultiEditor.ender68.geode/: README.md  mod.json  package.json
eclipse/resources/eclipse.eclipse-menu/: el.lang.json  emojis-hd.plist  emojis-uhd.plist  emojis.plist  en@pirate.lang.json  en_US.lang.json  es_ES.lang.json  fr_FR.lang.json  id.lang.json  ja.lang.json  ko.lang.json  lol_US.lang.json  pl.lang.json  pt_BR.lang.json  ro_RO.lang.json  (+5 more)
ender68.CollabEditor.geode/: server.js
ender68.CollabEditor.geode/resources/: README.md
src/: ChatLayer.cpp  ChatLayer.hpp  CollabManager.cpp  CollabManager.hpp  CollabNetworkManager.hpp  CollabPopups.cpp  CollabPopups.hpp  EditLevelLayer.cpp  GameHooks.cpp  Hooks.cpp  Hooks.hpp  LevelMenu.cpp  LocalLevelLayer.cpp  NetworkingManager.cpp  NetworkingManager.hpp  PacketHandler.cpp  Resync.cpp  main.cpp  main_minimal.cpp  main_simple.cpp  main_working.cpp
src/Networking/: WebSocketClient.cpp  WebSocketClient.hpp
src/UI/: ChatWindow.cpp  ChatWindow.hpp  CollabPanel.cpp  CollabPanel.hpp  CursorIndicator.cpp  CursorIndicator.hpp  CursorManager.cpp  PlayerList.cpp  PlayerList.hpp
src/Utils/: ColorUtils.cpp  ColorUtils.hpp
src/core/: CollabNetworkManager.cpp
src/fnc/: EditLevelLayer.cpp  GameHooks.cpp  LevelUI.cpp
src/ui/: CollabMenu.cpp
